--- a/FightAcademy/FightAcademy/Controllers/Coaches/CoachTableViewCell.xib
+++ b/FightAcademy/FightAcademy/Controllers/Coaches/CoachTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="372" height="182"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4pg-TG-UVw">
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4pg-TG-UVw">
                         <rect key="frame" x="12" y="6" width="348" height="170"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="testAvatarImage" translatesAutoresizingMaskIntoConstraints="NO" id="h4H-Hj-5J4">
