--- a/FightAcademy/FightAcademy/Controller/LogIn/LogInViewController.xib
+++ b/FightAcademy/FightAcademy/Controller/LogIn/LogInViewController.xib
@@ -12,13 +12,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LogInViewController" customModule="FightAcademy" customModuleProvider="target">
             <connections>
-                <outlet property="doneButton" destination="uwH-v1-qWV" id="86e-Xo-YQW"/>
-                <outlet property="passwordErrorLabel" destination="P1H-ai-WvR" id="JSh-ne-B73"/>
-                <outlet property="passwordTextField" destination="PGR-wF-Zic" id="TiX-rZ-JRK"/>
-                <outlet property="phoneErrorLabel" destination="FWc-YO-0zD" id="CB0-3y-I63"/>
-                <outlet property="phoneTextField" destination="aUo-ay-bUO" id="XTM-bS-hjw"/>
-                <outlet property="scrollView" destination="A0I-ZF-fon" id="yfR-OQ-MsJ"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="doneButton" destination="uwH-v1-qWV" id="u7e-2h-cUL"/>
+                <outlet property="passwordErrorLabel" destination="P1H-ai-WvR" id="rRR-R2-0Eu"/>
+                <outlet property="passwordTextField" destination="PGR-wF-Zic" id="M0T-T6-Ghk"/>
+                <outlet property="phoneErrorLabel" destination="FWc-YO-0zD" id="mIW-om-l6M"/>
+                <outlet property="phoneTextField" destination="aUo-ay-bUO" id="9gM-ip-UpF"/>
+                <outlet property="scrollView" destination="A0I-ZF-fon" id="Mu4-tW-GUx"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="Jxc-ld-yGE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -33,13 +33,13 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="852"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1fM-Yd-mDF">
-                                    <rect key="frame" x="20.5" y="0.0" width="373" height="529"/>
+                                    <rect key="frame" x="20.5" y="0.0" width="373" height="530.5"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Ul-8v-Wxu">
-                                            <rect key="frame" x="0.0" y="0.0" width="373" height="280"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="373" height="281.5"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="IpD-6q-sSb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="280"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="373" height="281.5"/>
                                                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
@@ -53,7 +53,7 @@
                                             </constraints>
                                         </view>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="YUa-ti-0bM">
-                                            <rect key="frame" x="0.0" y="310" width="373" height="55"/>
+                                            <rect key="frame" x="0.0" y="311.5" width="373" height="55"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aUo-ay-bUO" customClass="LeadingImageTextField" customModule="FightAcademy" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="373" height="49"/>
@@ -84,9 +84,9 @@
                                             </subviews>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="7wz-RJ-FQB">
-                                            <rect key="frame" x="0.0" y="395" width="373" height="55"/>
+                                            <rect key="frame" x="0.0" y="396.5" width="373" height="55"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PGR-wF-Zic" customClass="TrailingButtonTextField" customModule="FightAcademy" customModuleProvider="target">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PGR-wF-Zic" customClass="TrailingImageTextField" customModule="FightAcademy" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="373" height="49"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="password"/>
@@ -107,10 +107,7 @@
                                                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                             <real key="value" value="18"/>
                                                         </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="image" keyPath="trailingImageButton" value="eye"/>
-                                                        <userDefinedRuntimeAttribute type="color" keyPath="trailingImageButtonColor">
-                                                            <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="image" keyPath="trailingImageButton" value="eye.fill" catalog="system"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1H-ai-WvR">
@@ -122,7 +119,7 @@
                                             </subviews>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uwH-v1-qWV" customClass="DesignableButton" customModule="FightAcademy" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="480" width="373" height="49"/>
+                                            <rect key="frame" x="0.0" y="481.5" width="373" height="49"/>
                                             <color key="backgroundColor" name="customYellow"/>
                                             <state key="normal" title="Done">
                                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -143,7 +140,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="hfm-hL-bnK">
-                                    <rect key="frame" x="20.5" y="729" width="373" height="86"/>
+                                    <rect key="frame" x="20.5" y="730.5" width="373" height="86"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiM-4u-RpS">
                                             <rect key="frame" x="0.0" y="0.0" width="373" height="32"/>
@@ -202,6 +199,7 @@
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="A0I-ZF-fon" secondAttribute="top" id="PPT-5S-80A"/>
+                <constraint firstItem="7Ul-8v-Wxu" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.344" id="Wrx-Dv-sOr"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="A0I-ZF-fon" secondAttribute="trailing" id="ds1-nr-FPq"/>
                 <constraint firstAttribute="bottom" secondItem="A0I-ZF-fon" secondAttribute="bottom" id="fHZ-sF-maf"/>
                 <constraint firstItem="uwH-v1-qWV" firstAttribute="height" secondItem="fnl-2z-Ty3" secondAttribute="height" multiplier="0.06" id="mu1-pf-bRq"/>
@@ -225,9 +223,9 @@
         </designable>
     </designables>
     <resources>
-        <image name="eye" width="20" height="12"/>
+        <image name="eye.fill" catalog="system" width="128" height="78"/>
         <image name="lock" width="15" height="20"/>
-        <image name="logo" width="128" height="34"/>
+        <image name="logo" width="256" height="68"/>
         <image name="phone" width="21" height="21"/>
         <namedColor name="customGray">
             <color red="0.35294117647058826" green="0.35294117647058826" blue="0.35294117647058826" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
