--- a/FightAcademy/FightAcademy/Controller/Register/RegisterViewController.xib
+++ b/FightAcademy/FightAcademy/Controller/Register/RegisterViewController.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterViewController" customModule="FightAcademy" customModuleProvider="target">
             <connections>
-                <outlet property="button" destination="L1g-TR-NsJ" id="Mfh-mD-spo"/>
-                <outlet property="firstNameTextField" destination="XZH-tN-Jbl" id="bjW-rJ-zjQ"/>
-                <outlet property="nameErrorLabel" destination="wE8-zn-DRs" id="C6t-KM-yZN"/>
-                <outlet property="numberTextField" destination="TrT-q5-7Q5" id="f9X-5T-gyW"/>
-                <outlet property="passwordErrorLabel" destination="kye-JH-gUU" id="OhF-mG-fsR"/>
-                <outlet property="passwordTextField" destination="LrI-Op-0Ml" id="jxC-2m-wG7"/>
-                <outlet property="phoneErrorLabel" destination="QPZ-LO-pYv" id="Uu0-zd-1Nv"/>
-                <outlet property="scrollView" destination="hCa-hd-e4A" id="rdg-xB-Zh6"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="doneButton" destination="L1g-TR-NsJ" id="NST-4P-BST"/>
+                <outlet property="firstNameTextField" destination="XZH-tN-Jbl" id="5hQ-vg-miU"/>
+                <outlet property="nameErrorLabel" destination="wE8-zn-DRs" id="GnM-5H-ER3"/>
+                <outlet property="passwordErrorLabel" destination="kye-JH-gUU" id="nmv-AD-Co0"/>
+                <outlet property="passwordTextField" destination="LrI-Op-0Ml" id="HWc-jJ-0AC"/>
+                <outlet property="phoneErrorLabel" destination="QPZ-LO-pYv" id="L7O-wD-V62"/>
+                <outlet property="phoneTextField" destination="TrT-q5-7Q5" id="Dbo-Az-GtO"/>
+                <outlet property="scrollView" destination="hCa-hd-e4A" id="ExH-TA-gcC"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="Mca-z7-YL0"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -125,7 +125,7 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="mcV-bi-yrC">
                                             <rect key="frame" x="0.0" y="426.5" width="337.5" height="59.5"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LrI-Op-0Ml" customClass="TrailingButtonTextField" customModule="FightAcademy" customModuleProvider="target">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LrI-Op-0Ml" customClass="TrailingImageTextField" customModule="FightAcademy" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="337.5" height="40"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="password"/>
@@ -147,15 +147,6 @@
                                                             <real key="value" value="18"/>
                                                         </userDefinedRuntimeAttribute>
                                                         <userDefinedRuntimeAttribute type="image" keyPath="trailingImageButton" value="eye.fill" catalog="system"/>
-                                                        <userDefinedRuntimeAttribute type="color" keyPath="trailingImageButtonColor">
-                                                            <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="trailingButtonWidth">
-                                                            <real key="value" value="10"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="trailingButtonHeight">
-                                                            <real key="value" value="11"/>
-                                                        </userDefinedRuntimeAttribute>
                                                     </userDefinedRuntimeAttributes>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kye-JH-gUU">
@@ -251,7 +242,7 @@
     <resources>
         <image name="eye.fill" catalog="system" width="128" height="78"/>
         <image name="lock" width="15" height="20"/>
-        <image name="logo" width="128" height="34"/>
+        <image name="logo" width="256" height="68"/>
         <image name="mail" width="20" height="20"/>
         <image name="phone" width="21" height="21"/>
         <namedColor name="customYellow">
