--- a/FightAcademy/FightAcademy/Controllers/Activity/ActivityCollectionViewCell.xib
+++ b/FightAcademy/FightAcademy/Controllers/Activity/ActivityCollectionViewCell.xib
@@ -27,36 +27,36 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Crossfit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fMy-gA-uI8">
                                         <rect key="frame" x="0.0" y="15" width="173" height="20.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22.01.2021" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VRL-Tp-SIf">
                                         <rect key="frame" x="173" y="15.5" width="173" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="OCw-pm-wpD">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="OCw-pm-wpD">
                                 <rect key="frame" x="10" y="70" width="346" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coach" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9z-Br-k7h">
-                                        <rect key="frame" x="0.0" y="0.0" width="115.5" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="20.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem Ipsum" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l22-5p-pH0">
-                                        <rect key="frame" x="115.5" y="0.0" width="115" height="20.5"/>
+                                        <rect key="frame" x="110" y="0.0" width="183" height="20.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Mj-dV-gAS">
-                                        <rect key="frame" x="230.5" y="0.0" width="115.5" height="20.5"/>
+                                        <rect key="frame" x="293" y="0.0" width="53" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -65,15 +65,15 @@
                                 <rect key="frame" x="10" y="102.5" width="346" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3D-JU-f8T">
-                                        <rect key="frame" x="0.0" y="0.0" width="115.5" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="110" height="20.5"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 UAH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkW-4W-Dm0">
-                                        <rect key="frame" x="115.5" y="0.0" width="230.5" height="20.5"/>
+                                        <rect key="frame" x="110" y="0.0" width="236" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -84,12 +84,15 @@
                             <constraint firstItem="QJ8-ho-FHh" firstAttribute="top" secondItem="Eig-1M-wsv" secondAttribute="top" constant="10" id="282-wZ-yzb"/>
                             <constraint firstItem="OCw-pm-wpD" firstAttribute="leading" secondItem="Eig-1M-wsv" secondAttribute="leading" constant="10" id="29u-jh-6vr"/>
                             <constraint firstAttribute="trailing" secondItem="QJ8-ho-FHh" secondAttribute="trailing" constant="10" id="Bzh-J1-IsA"/>
+                            <constraint firstItem="a9z-Br-k7h" firstAttribute="width" secondItem="Eig-1M-wsv" secondAttribute="width" multiplier="0.3" id="LEx-4q-ACF"/>
                             <constraint firstItem="QJ8-ho-FHh" firstAttribute="leading" secondItem="Eig-1M-wsv" secondAttribute="leading" constant="10" id="TKz-O1-8qI"/>
                             <constraint firstAttribute="bottom" secondItem="dUI-w7-Kci" secondAttribute="bottom" constant="10" id="dVA-Tf-RY0"/>
                             <constraint firstItem="D3D-JU-f8T" firstAttribute="width" secondItem="a9z-Br-k7h" secondAttribute="width" id="dg9-Uu-Uth"/>
+                            <constraint firstItem="OCw-pm-wpD" firstAttribute="height" secondItem="Eig-1M-wsv" secondAttribute="height" multiplier="0.154135" id="dmM-1p-gKI"/>
                             <constraint firstItem="dUI-w7-Kci" firstAttribute="leading" secondItem="Eig-1M-wsv" secondAttribute="leading" constant="10" id="n8h-tN-BPy"/>
                             <constraint firstItem="OCw-pm-wpD" firstAttribute="top" relation="lessThanOrEqual" secondItem="QJ8-ho-FHh" secondAttribute="bottom" constant="10" id="nCB-Qi-Vwy"/>
                             <constraint firstAttribute="trailing" secondItem="OCw-pm-wpD" secondAttribute="trailing" constant="10" id="ohX-Ag-CUB"/>
+                            <constraint firstItem="l22-5p-pH0" firstAttribute="width" secondItem="Eig-1M-wsv" secondAttribute="width" multiplier="0.5" id="rA9-I7-k6d"/>
                             <constraint firstItem="dUI-w7-Kci" firstAttribute="top" secondItem="OCw-pm-wpD" secondAttribute="bottom" constant="12" id="vnU-Sz-7Rh"/>
                             <constraint firstAttribute="trailing" secondItem="dUI-w7-Kci" secondAttribute="trailing" constant="10" id="z9v-Bo-8AT"/>
                         </constraints>
